--- a/styles/style.css
+++ b/styles/style.css
@@ -130,6 +130,13 @@ body{
     width: 160px;
 }
 
+.tempBloco {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+}
+
 .cardTop {
     display: flex;
     align-items: center;
@@ -175,12 +182,11 @@ body{
 }
 
 .cardLow {
-    height: 90px;
+    height: 110px;
     background: var(--corDark);
     color: white;
     border-radius: 0px 25px 0px 0px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 19px;
     display: flex;
     align-items: center;
     justify-content: center;
